[tool.poetry]
name = "rapidhrv"
version = "0.2.0"
description = "A package for preprocessing, analyzing and visualizing cardiac data"
authors = ["Peter Kirk <p.kirk@ucl.ac.uk>"]
license = "MIT"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["scipy", "pandas"]
ignore_missing_imports = true

[tool.black]
line-length = 99

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.0"
scipy = "^1.7.0"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
jupyter = {version = "^1.0.0", optional = true}
matplotlib = {version = "^3.4.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
nbstripout = "^0.5.0"

[tool.poetry.extras]
notebooks = ["jupyter", "matplotlib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
