[tool.poetry]
name = "rapidhrv"
version = "0.2.1"
description = "A package for preprocessing, analyzing and visualizing cardiac data"
authors = ["Peter Kirk <p.kirk@ucl.ac.uk>"]
license = "MIT"

[tool.taskipy.tasks]
test = "task test_format && task test_mypy && task test_pytest"
test_pytest = "pytest"
test_format = "black --check . && isort --check ."
test_mypy = "mypy ."
format = "task format_black && task format_isort"
format_black = "black ."
format_isort = "isort ."

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true

[tool.black]
line-length = 99

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.0"
scipy = "^1.7.0"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
jupyter = {version = "^1.0.0", optional = true}
matplotlib = {version = "^3.4.2", optional = true}
h5py = "^3.3.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
nbstripout = "^0.5.0"
taskipy = "^1.8.1"
flake8 = "^3.9.2"

[tool.poetry.extras]
notebooks = ["jupyter", "matplotlib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
