[metadata]
# replace with your username:
name = rapidhrv
version = 0.0.1
author = Peter Kirk
author_email = p.kirk@ucl.ac.uk
description = A package for preprocessing, analyzing, and visualizing cardiac data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib==3.3.4
    pandas==1.2.2
    scipy==1.6.1
    scitkit-learn==0.24.1
