[metadata]
name = rapidhrv
version = 0.0.4
author = Peter Kirk
author_email = p.kirk@ucl.ac.uk
description = A package for preprocessing, analyzing, and visualizing cardiac data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peterakirk/RapidHRV/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib==3.3.4
    pandas==1.2.2
    scipy==1.6.1
    scikit-learn==0.24.1
