[metadata]
name = rapidhrv
version = 0.1.5
author = Peter Kirk
author_email = p.kirk@ucl.ac.uk
description = A package for preprocessing, analyzing, and visualizing cardiac data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peterakirk/RapidHRV/
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = rapidhrv
python_requires = ~=3.9
install_requires =
    numpy~=1.21
